Add UI enhancements and tech stack scrolling feature
Improved responsiveness across components with dynamic width adjustments. Introduced a scrolling tech stack with navigation arrows for better usability. Updated project images and descriptions in the dataset, refactored redundant code, and enhanced hover/transition effects for a polished user interface.

Signed-off-by: Kowshik B <135410733+LuckyBoy587@users.noreply.github.com>

--- a/src/colors.css
+++ b/src/colors.css
@@ -7,4 +7,6 @@
     --bright-text: #fafafa;
     --gray-text: hsla(0, 0%, 84%, 0.7);
     --profile-pic-gradient: linear-gradient(90deg,rgba(63, 71, 70, 1) 78%, rgba(18, 18, 18, 1) 100%);
+    --arrow-bg: rgba(255, 255, 255, 0.05);
+    --arrow-hover-bg: rgb(83, 83, 83);
 }
